--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 logfile=/var/log/supervisord/logfile.log
 pidfile=/var/log/supervisord/supervisord.pid
-childlogdir=/var/log/supervisord
+# childlogdir=/var/log/supervisord
 
 [program:plumber]
 command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile.R
@@ -15,7 +15,7 @@ stderr_logfile=/var/log/supervisord/plumber_err.log
 
 [program:shiny-app]
 command=/usr/bin/shiny-server.sh
-user=root
+user=shiny
 priority=2
 autostart=true
 autorestart=true
