Signed-off-by: Ashish K Sahoo <ashish_k_sahoo@yahoo.co.in>

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,6 +1,6 @@
 # Define the user we should use when spawning R Shiny processes
 run_as shiny;
-
+env SHINY_LOG_LEVEL=TRACE;
 # Define a top-level server which will listen on a port
 server {
   # Instruct this server to listen on port 80. The app at dokku-alt need expose PORT 80, or 500 e etc. See the docs
@@ -14,10 +14,11 @@ server {
     site_dir /srv/shiny-server;
     
     # Define where we should put the log files for this location
-    log_dir /var/log/supervisord;
+    log_dir /var/log/shiny-server;
     
     # Should we list the contents of a (non-Shiny-App) directory when the user 
     # visits the corresponding URL?
     directory_index on;
+    preserve_logs true;
   }
 }
