--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,7 +15,7 @@ stderr_logfile=/var/log/supervisord/plumber_err.log
 
 [program:shiny-app]
 command=/usr/bin/shiny-server.sh
-user=shiny
+user=root
 priority=2
 autostart=true
 autorestart=true
