Signed-off-by: Ashish K Sahoo <ashish_k_sahoo@yahoo.co.in>

--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -4,7 +4,7 @@ run_as shiny;
 server {
   # Instruct this server to listen on port 80. The app at dokku-alt need expose PORT 80, or 500 e etc. See the docs
   listen 9443;
-
+  preserve_logs true;
   # Define the location available at the base URL
   location / {
 
