--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ pidfile=/var/log/supervisord/supervisord.pid
 
 [program:plumber]
 command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile.R
-# user=shiny
+user=root
 priority=2
 autostart=true
 autorestart=true
@@ -15,7 +15,7 @@ stderr_logfile=/var/log/supervisord/plumber_err.log
 
 [program:shiny-app]
 command=/usr/bin/shiny-server.sh
-# user=shiny
+user=root
 priority=2
 autostart=true
 autorestart=true
