--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 logfile=/var/log/supervisord/logfile.log
 pidfile=/var/log/supervisord/supervisord.pid
-# childlogdir=/var/log/supervisord
+childlogdir=/var/log/supervisord
 
 [program:plumber]
 command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile.R
@@ -19,6 +19,8 @@ command=/usr/bin/shiny-server.sh
 priority=2
 autostart=true
 autorestart=true
+stdout_logfile=/var/log/supervisord/shiny_out.log
+stderr_logfile=/var/log/supervisord/shiny_err.log
 
 # [program:nginx]
 # command=/usr/sbin/nginx -g "daemon off;"
