--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,7 +1,7 @@
 # Define the user we should use when spawning R Shiny processes
 run_as shiny;
 # Define a top-level server which will listen on a port
-#preserve_logs true;
+preserve_logs true;
 server {
   # Instruct this server to listen on port 80. The app at dokku-alt need expose PORT 80, or 500 e etc. See the docs
   listen 9443;
