--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,6 @@
 [supervisord]
 nodaemon=true
+user=root
 logfile=/var/log/supervisord/logfile.log
 pidfile=/var/log/supervisord/supervisord.pid
 childlogdir=/var/log/supervisord
