--- a/supervisord.conf
+++ b/supervisord.conf
@@ -16,7 +16,7 @@ stderr_logfile=/var/log/supervisord/plumber_err.log
 
 [program:shiny-app]
 command=/usr/bin/shiny-server.sh
-# user=root
+user=shiny
 priority=2
 autostart=true
 autorestart=true
