--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,5 +1,5 @@
 # Define the user we should use when spawning R Shiny processes
-run_as shiny;
+run_as shiny username user;
 #run_as user;
 # Define a top-level server which will listen on a port
 preserve_logs true;
