--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
 nodaemon=true
-user=root
+# user=root
 logfile=/var/log/supervisord/logfile.log
 pidfile=/var/log/supervisord/supervisord.pid
 childlogdir=/var/log/supervisord
@@ -16,7 +16,7 @@ stderr_logfile=/var/log/supervisord/plumber_err.log
 
 [program:shiny-app]
 command=/usr/bin/shiny-server.sh
-user=shiny
+# user=shiny
 priority=2
 autostart=true
 autorestart=true
