--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,6 +1,6 @@
 # Define the user we should use when spawning R Shiny processes
-run_as shiny 1000630000;
-#run_as user;
+# run_as shiny ;
+run_as shiny 1001;
 # Define a top-level server which will listen on a port
 preserve_logs true;
 server {
