--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,7 +7,7 @@ childlogdir=/var/log/supervisord
 
 [program:plumber]
 command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile.R
-# user=root
+user=root
 priority=2
 autostart=true
 autorestart=true
@@ -16,7 +16,7 @@ stderr_logfile=/var/log/supervisord/plumber_err.log
 
 [program:shiny-app]
 command=/usr/bin/shiny-server.sh
-user=shiny
+user=root
 priority=2
 autostart=true
 autorestart=true
