--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ pidfile=/var/log/supervisord/supervisord.pid
 childlogdir=/var/log/supervisord
 
 [program:plumber]
-command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile.R
+command=r /srv/shiny-server/run-myfile.R
 # user=root
 priority=3
 autostart=true
