--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,7 +10,7 @@ command=r /srv/shiny-server/run-myfile.R
 # user=root
 priority=3
 autostart=true
-autorestart=true
+autorestart=unexpected
 stdout_logfile=/var/log/supervisord/plumber_out.log
 stderr_logfile=/var/log/supervisord/plumber_err.log
 
@@ -19,7 +19,7 @@ command=/usr/bin/shiny-server.sh
 # user=root
 priority=2
 autostart=true
-autorestart=true
+autorestart=unexpected
 #stdout_logfile=/var/log/supervisord/shiny_out.log
 #stderr_logfile=/var/log/supervisord/shiny_err.log
 
