--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,4 +1,7 @@
 # Define the user we should use when spawning R Shiny processes
+app_init_timeout 1800;
+app_idle_timeout 1800;
+disable_websockets off;
 # run_as shiny ;
 run_as shiny;
 # Define a top-level server which will listen on a port
