--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,7 +1,8 @@
 # Define the user we should use when spawning R Shiny processes
-app_init_timeout 1800;
-app_idle_timeout 1800;
+app_init_timeout 180000;
+app_idle_timeout 180000;
 disable_websockets off;
+disable_protocols xdr-streaming xhr-streaming iframe-eventsource iframe-htmlfile xdr-polling xhr-polling iframe-xhr-polling jsonp-polling;
 # run_as shiny ;
 run_as shiny;
 # Define a top-level server which will listen on a port
