--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,9 +6,9 @@ pidfile=/var/log/supervisord/supervisord.pid
 childlogdir=/var/log/supervisord
 
 [program:plumber]
-command=r /srv/shiny-server/run-myfile.R
+command=/home/shiny/build/bin/Rscript /srv/shiny-server/run-myfile.R
 # user=root
-priority=3
+priority=2
 autostart=true
 autorestart=unexpected
 stdout_logfile=/var/log/supervisord/plumber_out.log
