--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -2,7 +2,7 @@
 app_init_timeout 180000;
 app_idle_timeout 180000;
 disable_websockets off;
-disable_protocols xdr-streaming xhr-streaming iframe-eventsource iframe-htmlfile xdr-polling xhr-polling iframe-xhr-polling jsonp-polling;
+#disable_protocols xdr-streaming xhr-streaming iframe-eventsource iframe-htmlfile xdr-polling xhr-polling iframe-xhr-polling jsonp-polling;
 # run_as shiny ;
 run_as shiny;
 # Define a top-level server which will listen on a port
