--- a/Dockerfile copy
+++ b/Dockerfile copy
@@ -1,7 +1,7 @@
-FROM ashish1981/s390x-shiny-server:3.6.3
+FROM ashish1981/s390x-shiny-server
 ENV DEBIAN_FRONTEND noninteractive
 # ENV SHINY_LOG_LEVEL=TRACE
-# RUN install2.r  rJava
+RUN install2.r  rJava
 # # #
 RUN apt-get update && apt-get install -y \
     nano \
