--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,12 +1,15 @@
 # Define the user we should use when spawning R Shiny processes
-#app_init_timeout 180000;
-#app_idle_timeout 180000;
-#disable_websockets off;
+app_init_timeout 180000;
+app_idle_timeout 180000;
+disable_websockets true;
+http_keepalive_timeout 180000;
+sockjs_heartbeat_delay 180000;
+
 #disable_protocols xdr-streaming xhr-streaming iframe-eventsource iframe-htmlfile xdr-polling xhr-polling iframe-xhr-polling jsonp-polling;
 # run_as shiny ;
 run_as shiny;
 # Define a top-level server which will listen on a port
-#preserve_logs true;
+preserve_logs true;
 server {
   # Instruct this server to listen on port 80. The app at dokku-alt need expose PORT 80, or 500 e etc. See the docs
   listen 9443 0.0.0.0;
