test new sh fix
Signed-off-by: Ashish K Sahoo <ashissah@in.ibm.com>

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,8 @@ pidfile=/var/log/supervisord/supervisord.pid
 childlogdir=/var/log/supervisord
 
 [program:plumber]
-command=/usr/local/bin/r /srv/shiny-server/run-myfile.R
+#command=/usr/local/bin/r /srv/shiny-server/run-myfile.R
+command=/usr/bin/plumb.sh
 # user=root
 priority=2
 autostart=true
