--- a/supervisord.conf
+++ b/supervisord.conf
@@ -21,8 +21,8 @@ command=/usr/bin/shiny-server.sh
 priority=2
 autostart=true
 autorestart=unexpected
-#stdout_logfile=/var/log/supervisord/shiny_out.log
-#stderr_logfile=/var/log/supervisord/shiny_err.log
+stdout_logfile=/var/log/supervisord/shiny_out.log
+stderr_logfile=/var/log/supervisord/shiny_err.log
 
 # [program:nginx]
 # command=/usr/sbin/nginx -g "daemon off;"
