--- a/shiny-server.conf
+++ b/shiny-server.conf
@@ -1,10 +1,10 @@
 # Define the user we should use when spawning R Shiny processes
 app_init_timeout 180000;
 app_idle_timeout 180000;
-disable_websockets true;
+#disable_websockets true;
 http_keepalive_timeout 180000;
 sockjs_heartbeat_delay 180000;
-
+disable_protocols websocket xhr-streaming iframe-eventsource iframe-htmlfile iframe-xhr-polling;
 #disable_protocols xdr-streaming xhr-streaming iframe-eventsource iframe-htmlfile xdr-polling xhr-polling iframe-xhr-polling jsonp-polling;
 # run_as shiny ;
 run_as shiny;
