--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,36 +1,31 @@
 [supervisord]
 nodaemon=true
-# user=root
 logfile=/var/log/supervisord/logfile.log
 pidfile=/var/log/supervisord/supervisord.pid
 childlogdir=/var/log/supervisord
 
-[program:plumber]
-#command=/usr/local/bin/r /srv/shiny-server/run-myfile.R
-command=/usr/bin/plumb.sh
-# user=root
+[program:plumber1]
+command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile1.R
+user=root
 priority=2
 autostart=true
-autorestart=unexpected
-stdout_logfile=/var/log/supervisord/plumber_out.log
-stderr_logfile=/var/log/supervisord/plumber_err.log
+autorestart=true
+stdout_logfile=/var/log/supervisord/plumber1/plumber_out.log
+stderr_logfile=/var/log/supervisord/plumber1/plumber_err.log
+
+[program:plumber2]
+command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile2.R
+user=root
+priority=2
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/supervisord/plumber2/plumber_out.log
+stderr_logfile=/var/log/supervisord/plumber2/plumber_err.log
+
 
 [program:shiny-app]
 command=/usr/bin/shiny-server.sh
-# user=root
+user=root
 priority=2
 autostart=true
-autorestart=unexpected
-stdout_logfile=/var/log/supervisord/shiny_out.log
-stderr_logfile=/var/log/supervisord/shiny_err.log
-
-# [program:nginx]
-# command=/usr/sbin/nginx -g "daemon off;"
-# priority=900
-# stdout_logfile= /var/stdout
-# stdout_logfile_maxbytes=0
-# stderr_logfile=/var/stderr
-# stderr_logfile_maxbytes=0
-# username=root
-# autorestart=true
-# autostart=true
+autorestart=true
