fix supervisor conf update
Signed-off-by: Ashish K Sahoo <ashissah@in.ibm.com>

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,26 +6,28 @@ childlogdir=/var/log/supervisord
 
 [program:plumber1]
 command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile1.R
-user=root
+# user=root
 priority=2
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisord/plumber1/plumber_out.log
-stderr_logfile=/var/log/supervisord/plumber1/plumber_err.log
+stdout_logfile=/var/log/supervisord/plumber_out.log
+stderr_logfile=/var/log/supervisord/plumber_err.log
 
 [program:plumber2]
 command=/usr/local/bin/Rscript /srv/shiny-server/run-myfile2.R
-user=root
+# user=root
 priority=2
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisord/plumber2/plumber_out.log
-stderr_logfile=/var/log/supervisord/plumber2/plumber_err.log
+stdout_logfile=/var/log/supervisord/plumber1_out.log
+stderr_logfile=/var/log/supervisord/plumber1_err.log
 
 
 [program:shiny-app]
 command=/usr/bin/shiny-server.sh
-user=root
+# user=root
 priority=2
 autostart=true
 autorestart=true
+stdout_logfile=/var/log/supervisord/shiny_out.log
+stderr_logfile=/var/log/supervisord/shiny_err.log
